# bitlbee-whatsapp-nt

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac
whatsapp-nt/: Makefile.am  bbwant-base64.c  bbwant-base64.h  bbwant-client-appdir.c  bbwant-client-appdir.h  bbwant-client-qrencode.c  bbwant-client-qrencode.h  bbwant-client.c  bbwant-client.h  bbwant-corewebsocket-client.c  bbwant-corewebsocket-client.h  bbwant-corewebsocket.c  bbwant-corewebsocket.h  bbwant-curve25519-donna.c  bbwant-curve25519-donna.h  bbwant-libwebsocket.c  bbwant-libwebsocket.h  bbwant-tester-websocket.c  bbwant-tester-websocket.h  bbwant-userdir.c  bbwant-userdir.h  bbwant-websocket.c  bbwant-websocket.h  bbwant.h  ex-client-x509.c  tcp.c
